# AxVaGlobe

./: README.md  __init__.py  description  errs.py
py/: README.md  pyproject.toml
py/src/axvaglobe/core/examples/: schema_example.py
py/src/axvaglobe/core/schema/: __init__.py  _base_node.py  _base_node_layer.py  _node_a.py  _node_ab.py  _node_b.py  _node_bc.py  _node_c.py  _node_layer_a.py  _node_layer_ab.py  _node_layer_b.py  _node_layer_bc.py  _node_layer_c.py  _node_layer_np.py  _node_layer_sp.py  _node_np.py  _node_sp.py  constants.py  errors.py  node_errors.py  node_factory.py  node_layer_errors.py  node_layer_factory.py  node_layer_registry.py  node_registry.py  partition.py  schema.py
py/src/axvaglobe/core/schema/node_layers/: __init__.py  _base_node_layer.py  _node_layer_a.py  _node_layer_ab.py  _node_layer_b.py  (+14 more)
py/src/core/examples/: schema_example.py
py/src/core/logical/: partition.py
py/src/core/schema/: __init__.py  base_node.py  base_node_layer.py  base_schema.py  constants.py  errors.py  node.py  node_a.py  node_ab.py  node_b.py  node_bc.py  node_c.py  node_factory.py  node_layer.py  node_layer_a.py  node_layer_ab.py  node_layer_b.py  node_layer_bc.py  node_layer_c.py  node_layer_factory.py  node_layer_np.py  node_layer_registry.py  node_layer_sp.py  node_np.py  node_registry.py  node_sp.py  partition.py  schema.py
py/src/core/schema/node_layers/: base_node_layer.py  node_layer.py  node_layer_a.py  node_layer_ab.py  node_layer_b.py  node_layer_bc.py  node_layer_c.py  node_layer_np.py  node_layer_sp.py
py/src/core/schema/nodes/: __init__.py  base_node.py  node_a.py  node_ab.py  node_b.py  node_bc.py  node_c.py  node_np.py  node_sp.py
py/src/core/schema_examples/: schema_example.py
py/tests/test_core/test_schema/: conftest.py  test_constants.py  test_node_a.py  test_node_ab.py  test_node_b.py  test_node_bc.py  test_node_c.py  test_node_layer_a.py  test_node_layer_ab.py  test_node_layer_b.py  test_node_layer_bc.py  test_node_layer_c.py  test_node_np.py  test_node_sp.py  test_partition.py
py/tests/unit/: README.md  conftest.py
py/tests/unit/core/schema/: conftest.py  test_constants.py  test_errors.py  test_node_a.py  test_node_ab.py  test_node_b.py  test_node_bc.py  test_node_c.py  test_node_layer_a.py  test_node_layer_ab.py  test_node_layer_b.py  test_node_layer_bc.py  test_node_layer_c.py  test_node_np.py  test_node_sp.py  test_partition.py
(+101 files in other folders)
